--- a/Sahayak_backend/package.json
+++ b/Sahayak_backend/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0"
-  }
+    "express": "^5.1.0",
+    "@google-cloud/speech": "^6.5.0",
+    "@google-cloud/text-to-speech": "^5.3.0"
+}
 }
