--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "@types/react-speech-recognition": "^3.9.6",
     "axios": "^1.12.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-speech-recognition": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
